--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-stage-0": "^6.1.18",
+    "css-loader": "^0.23.0",
     "immutable": "^3.7.5",
     "lodash": "^3.10.1",
+    "node-sass": "^3.4.2",
     "path": "^0.12.7",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
     "three": "^0.73.0",
     "vector2d": "^2.1.0",
     "webpack": "^1.12.9",
