--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-stage-0": "^6.1.18",
     "css-loader": "^0.23.0",
+    "fs": "0.0.2",
     "immutable": "^3.7.5",
+    "json-loader": "^0.5.4",
     "lodash": "^3.10.1",
     "node-sass": "^3.4.2",
     "path": "^0.12.7",
+    "pixi.js": "^3.0.8",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "three": "^0.73.0",
