--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Particle simulator",
   "scripts": {
     "test": "eslint src",
+    "build": "npm run clean && webpack",
     "dev": "webpack-dev-server --progress --colors --content-base www/",
-    "clean": "rm www/app/*"
+    "clean": "[ -d www/app ] && rm -rf www/app || exit 0"
   },
   "repository": {
     "type": "git",
