--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-sass": "^3.4.2",
     "path": "^0.12.7",
     "pixi.js": "^3.0.8",
+    "ramda": "^0.18.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "vector2d": "^2.1.0",
